fixing list-item height and client id alignment for client id in settings.

--- a/res/generators/templates/application/public/css/iphone.css
+++ b/res/generators/templates/application/public/css/iphone.css
@@ -157,6 +157,7 @@ div#content ul {
 
 div#content ul li {
     border-bottom: 1px solid #848284;
+		min-height: 40px;
 }
 
 div#content ul li a {
@@ -165,6 +166,9 @@ div#content ul li a {
     font-size: 20px;
     height: 100%;
     width: 100%;
+    padding: 15px 0 15px 0;
+}
+div#content ul li > span  {
     padding: 15px 0 15px 0;
 }
 
@@ -320,8 +324,8 @@ div#content form select {
 }
 
 div#content form textarea {
-  	-webkit-appearance: none;
-    border: none;
+	-webkit-appearance: none;
+	border: none;
 	font-size: medium;
 	width:280px;
 	line-height:20px;
@@ -339,6 +343,10 @@ div#content ul#settings li.alertMessage{
     text-align: center;
 }
 
+div#content ul#settings li span {
+	line-height:40px;
+}
+ 
 div#content ul#settings li.alertMessage span.message{
 		color: red;
 }
@@ -347,7 +355,10 @@ div#content ul#settings li span.clientID{
 	margin-left:4px;
 	font-size:10px;
 }
-
+div#content ul#settings li div.itemLabel span.title{
+  padding: 0;
+	margin:0;
+}
 div#content div#reset {
     height: 100%;
 		width:300px;
